Use collect(Collectors.toList()) as .toList() is Immuteable
Signed-off-by: Steffen Karlsson <steffen.karlsson@maersk.com>